# mysql-wallet-storage

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.txt  README.md  mysql-wallet-storage-buildtools.dockerfile  tag_version.sh
libaurorawallet/: Cargo.toml  build.rs
libaurorawallet/database/schema/change_scripts/: wallet_schema_creation.2018-05-07.sql
libaurorawallet/database/schema/revert_scripts/: wallet_schema_creation.2018-05-07.revert.sql
libaurorawallet/src/: lib.rs
libaurorawallet/src/api/: mod.rs
libaurorawallet/src/aurora_storage/: mod.rs  query_translator.rs  query_translator_1.rs  statement.rs
libaurorawallet/src/errors/: error_code.rs  mod.rs
libaurorawallet/src/libindy/: mod.rs
libaurorawallet/src/utils/: callbacks.rs  error_code.rs  handle_store.rs  mod.rs  multi_pool.rs  test_utils.rs
libaurorawallet/tests/: api.rs  chained_perf_test.rs  demo.rs  indy_sdk_integration_tests.rs  performance_tests.rs
libaurorawallet/tests/java_libindy_integration_tests/: .gitignore  Readme.md  pom.xml
libaurorawallet/tests/java_libindy_integration_tests/lib/: .gitignore
libaurorawallet/tests/java_libindy_integration_tests/resources/: log4j2-test.xml  test.properties
libaurorawallet/tests/java_libindy_integration_tests/resources/testng_suites/: AuroraStorageLongevityTest.xml  NonSecrets-NegativeTests.xml  NonSecrets-PositiveTests.xml
libaurorawallet/tests/java_libindy_integration_tests/src/main/java/: AuroraPluggableStorage.java
libaurorawallet/tests/java_libindy_integration_tests/src/main/java/aurora_integration_tests/main/: Action.java  AuroraPluggableStorage.java  (+3 more)
libaurorawallet/tests/java_libindy_integration_tests/src/test/java/: BaseTest.java  NonSecretsApiTest.java
libaurorawallet/tests/test_utils/: api_requests.rs  config.rs  helper_functions.rs  mod.rs
libmysqlstorage/: Cargo.toml
libmysqlstorage/src/: lib.rs
libmysqlstorage/src/api/: mod.rs
libmysqlstorage/src/errors/: error_code.rs
libmysqlstorage/src/libindy/: mod.rs
libmysqlstorage/src/mysql_storage/: mod.rs  query_translator.rs
libmysqlstorage/src/utils/: logger.rs  mod.rs  multi_pool.rs
libmysqlstorage/tests/: api.rs  chained_perf_test.rs  performance_tests.rs
libmysqlstorage/tests/java_libindy_integration_tests/: .gitignore  README.md  pom.xml
libmysqlstorage/tests/java_libindy_integration_tests/lib/: .gitignore
libmysqlstorage/tests/java_libindy_integration_tests/resources/: log4j2-test.xml  test.properties
libmysqlstorage/tests/java_libindy_integration_tests/resources/testng_suites/: MySQLStorageLongevityTest.xml  NonSecrets-NegativeTests.xml  NonSecrets-PositiveTests.xml  WalletLongevityTest.xml
libmysqlstorage/tests/java_libindy_integration_tests/src/test/java/common_wallet_tests/: WalletLongevityTest.java
libmysqlstorage/tests/test_utils/: api_requests.rs  config.rs  mod.rs  test_env.rs
(+69 files in other folders)
