[package]
name = "aurorawallet"
version = "0.1.0"
authors = ["Darko Kulic <darko.kulic@evernym.com>"]

[lib]
path = "src/lib.rs"
crate-type = ["staticlib","rlib", "dylib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2.21"
lazy_static = "0.2"
mysql = "12.0"
rand = "*"
