[package]
name = "aurorastorage"
version = "0.1.0"
authors = ["Darko Kulic <darko.kulic@evernym.com>"]
build = "build.rs"

[lib]
name = "aurorastorage"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
libc = "0.2.21"
lazy_static = "0.2"
mysql = "13.0"
rand = "*"
env_logger = "0.4.2"
log = "0.3.7"
